Fix treenode spacing

--- a/src/scss/snippet.scss
+++ b/src/scss/snippet.scss
@@ -6,7 +6,7 @@
 .hierarchy-editor--ltr {
     .TreeNode,
     .TreeNode--list {
-        margin-left: 1.7rem;
+        margin-left: 1.55rem;
     }
 }
 %rmvTag {
